--- a/SimpleWeather.Android/SimpleWeather.Android.csproj
+++ b/SimpleWeather.Android/SimpleWeather.Android.csproj
@@ -1741,7 +1741,11 @@
   </Target>
   <Import Project="..\packages\Xamarin.Android.Arch.Core.Common.1.0.0\build\MonoAndroid80\Xamarin.Android.Arch.Core.Common.targets" Condition="Exists('..\packages\Xamarin.Android.Arch.Core.Common.1.0.0\build\MonoAndroid80\Xamarin.Android.Arch.Core.Common.targets')" />
   <PropertyGroup>
-    <PreBuildEvent>"$(SolutionDir)EditManifest.exe" "$(ProjectDir)Properties\AndroidManifest.xml" $(ConfigurationName)</PreBuildEvent>
+    <PreBuildEvent>"$(SolutionDir)EditManifest.exe" "$(ProjectDir)Properties\AndroidManifest.xml" $(ConfigurationName)
+"$(SolutionDir)EditManifest.exe" "$(ProjectDir)Resources\xml\app_widget_1x1_info.xml" $(ConfigurationName)
+"$(SolutionDir)EditManifest.exe" "$(ProjectDir)Resources\xml\app_widget_2x2_info.xml" $(ConfigurationName)
+"$(SolutionDir)EditManifest.exe" "$(ProjectDir)Resources\xml\app_widget_4x1_info.xml" $(ConfigurationName)
+"$(SolutionDir)EditManifest.exe" "$(ProjectDir)Resources\xml\app_widget_4x2_info.xml" $(ConfigurationName)</PreBuildEvent>
   </PropertyGroup>
   <Import Project="..\packages\Xamarin.Android.Support.Annotations.27.0.2\build\MonoAndroid81\Xamarin.Android.Support.Annotations.targets" Condition="Exists('..\packages\Xamarin.Android.Support.Annotations.27.0.2\build\MonoAndroid81\Xamarin.Android.Support.Annotations.targets')" />
   <Import Project="..\packages\Xamarin.Android.Arch.Lifecycle.Common.1.0.3\build\MonoAndroid80\Xamarin.Android.Arch.Lifecycle.Common.targets" Condition="Exists('..\packages\Xamarin.Android.Arch.Lifecycle.Common.1.0.3\build\MonoAndroid80\Xamarin.Android.Arch.Lifecycle.Common.targets')" />
