--- a/SimpleWeather.Android/Properties/AndroidManifest.xml
+++ b/SimpleWeather.Android/Properties/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- NOTE: Version Code Format (TargetSDK, Version Name, Build Number, Variant Code (Android: 00, WearOS: 01)-->
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.thewizrd.simpleweather_debug" android:installLocation="auto"
-          android:versionCode="271300100" android:versionName="1.3.0">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.thewizrd.simpleweather" android:installLocation="auto"
+          android:versionCode="271310000" android:versionName="1.3.1">
 	<uses-sdk android:minSdkVersion="16" android:targetSdkVersion="27" />
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -11,7 +11,7 @@
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="18" />
 	<uses-permission android:name="com.android.alarm.permission.SET_ALARM" android:maxSdkVersion="18" />
 	<application android:allowBackup="true" android:label="@string/app_name" android:theme="@style/MasterDetailTheme">
-		<receiver android:enabled="@bool/enable_alertnotifservice" android:exported="@bool/enable_alertnotifservice" android:name="com.thewizrd.simpleweather_debug.WeatherNotificationBroadcastReceiver" />
-		<service android:enabled="@bool/enable_alertnotifservice" android:exported="false" android:permission="android.permission.BIND_JOB_SERVICE" android:name="com.thewizrd.simpleweather_debug.WeatherAlertNotificationService" />
+		<receiver android:enabled="@bool/enable_alertnotifservice" android:exported="@bool/enable_alertnotifservice" android:name="com.thewizrd.simpleweather.WeatherNotificationBroadcastReceiver" />
+		<service android:enabled="@bool/enable_alertnotifservice" android:exported="false" android:permission="android.permission.BIND_JOB_SERVICE" android:name="com.thewizrd.simpleweather.WeatherAlertNotificationService" />
 	</application>
 </manifest>
