--- a/SimpleWeather.Android/proguard.cfg
+++ b/SimpleWeather.Android/proguard.cfg
@@ -15,3 +15,9 @@
 
 -keep class android.support.v7.view.** { *; }
 -dontwarn android.support.v7.view.**
+
+-keep class android.support.design.widget.** { *; }
+-dontwarn android.support.design.widget.**
+
+-keep class android.support.design.internal.** { *; }
+-dontwarn android.support.design.internal.**
