--- a/SimpleWeather.Wear/proguard.cfg
+++ b/SimpleWeather.Wear/proguard.cfg
@@ -16,6 +16,12 @@
 -keep class android.support.v7.view.** { *; }
 -dontwarn android.support.v7.view.**
 
+-keep class android.support.design.widget.** { *; }
+-dontwarn android.support.design.widget.**
+
+-keep class android.support.design.internal.** { *; }
+-dontwarn android.support.design.internal.**
+
 -keep class android.support.wear.widget.BoxInsetLayout$LayoutParams
 -keepclassmembers class android.support.wear.widget.BoxInsetLayout$LayoutParams {
    <init>(...);
