--- a/SimpleWeather.Android/SimpleWeather.Android.csproj
+++ b/SimpleWeather.Android/SimpleWeather.Android.csproj
@@ -57,9 +57,6 @@
     <CodeAnalysisRuleSet>SimpleWeather.Android.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="GlideAssembly">
-      <HintPath>..\Components\GlideComponent-3.7.0\lib\android\GlideAssembly.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Mono.Android" />
     <Reference Include="Mono.Android.Export" />
@@ -130,7 +127,9 @@
     <AndroidResource Include="Resources\drawable\side_nav_bar.xml" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\activity_main.xml" />
+    <AndroidResource Include="Resources\layout\activity_main.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\activity_setup.xml">
@@ -138,10 +137,14 @@
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\app_bar_main.xml" />
+    <AndroidResource Include="Resources\layout\app_bar_main.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\fragment_location_search.xml" />
+    <AndroidResource Include="Resources\layout\fragment_location_search.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\fragment_locations.xml">
@@ -159,13 +162,19 @@
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\location_query_view.xml" />
+    <AndroidResource Include="Resources\layout\location_query_view.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\location_search_bar.xml" />
+    <AndroidResource Include="Resources\layout\location_search_bar.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\nav_header_main.xml" />
+    <AndroidResource Include="Resources\layout\nav_header_main.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\search_action_bar.xml">
@@ -173,7 +182,9 @@
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\weather_forecast_panel.xml" />
+    <AndroidResource Include="Resources\layout\weather_forecast_panel.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\menu\activity_main_drawer.xml" />
@@ -269,7 +280,9 @@
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout-large\fragment_weather_now.xml" />
+    <AndroidResource Include="Resources\layout-large\fragment_weather_now.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\values-xlarge\dimens.xml">
@@ -277,10 +290,14 @@
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\weather_hrforecast_panel.xml" />
+    <AndroidResource Include="Resources\layout\weather_hrforecast_panel.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\txt_forecast_panel.xml" />
+    <AndroidResource Include="Resources\layout\txt_forecast_panel.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\xml\pref_aboutapp.xml" />
@@ -311,16 +328,22 @@
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\app_widget_forecast_panel.xml" />
+    <AndroidResource Include="Resources\layout\app_widget_forecast_panel.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\app_widget_4x1.xml" />
+    <AndroidResource Include="Resources\layout\app_widget_4x1.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\xml\app_widget_4x1_info.xml" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\app_widget_2x2.xml" />
+    <AndroidResource Include="Resources\layout\app_widget_2x2.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\app_widget_4x2.xml">
@@ -328,7 +351,9 @@
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\app_widget_forecast_panel_small.xml" />
+    <AndroidResource Include="Resources\layout\app_widget_forecast_panel_small.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\xml\app_widget_2x2_info.xml" />
@@ -337,13 +362,9 @@
     <AndroidResource Include="Resources\xml\app_widget_4x2_info.xml" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\app_widget_forecast_panel_medium.xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <XamarinComponentReference Include="GlideComponent">
-      <Visible>False</Visible>
-      <Version>3.7.0</Version>
-    </XamarinComponentReference>
+    <AndroidResource Include="Resources\layout\app_widget_forecast_panel_medium.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable-nodpi\appwidget_preview_4x1.png" />
@@ -1221,7 +1242,9 @@
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout-v17\app_widget_4x2.xml" />
+    <AndroidResource Include="Resources\layout-v17\app_widget_4x2.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\values-v21\dimens.xml" />
@@ -1559,7 +1582,9 @@
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\weather_alert_panel.xml" />
+    <AndroidResource Include="Resources\layout\weather_alert_panel.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SimpleWeather.Droid.Shared\SimpleWeather.Droid.Shared.csproj">
@@ -1577,7 +1602,9 @@
     <AndroidResource Include="Resources\values-v24\bools.xml" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\activity_widget_setup.xml" />
+    <AndroidResource Include="Resources\layout\activity_widget_setup.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\menu\menu_widgetsetup.xml" />
@@ -1769,6 +1796,9 @@
     <PackageReference Include="Xamarin.Android.Arch.Lifecycle.Runtime">
       <Version>1.0.3</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.Android.Glide">
+      <Version>4.0.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Android.Support.Animated.Vector.Drawable">
       <Version>27.0.2</Version>
     </PackageReference>
@@ -1848,7 +1878,6 @@
       <Version>60.1142.1</Version>
     </PackageReference>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="..\SimpleWeather\SimpleWeather_Xamarin.projitems" Label="Shared" Condition="Exists('..\SimpleWeather\SimpleWeather_Xamarin.projitems')" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <PropertyGroup>
