--- a/SimpleWeather.Wear/SimpleWeather.Wear.csproj
+++ b/SimpleWeather.Wear/SimpleWeather.Wear.csproj
@@ -59,9 +59,6 @@
     <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="GlideAssembly">
-      <HintPath>..\Components\GlideComponent-3.7.0\lib\android\GlideAssembly.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.IO.Compression" />
     <Reference Include="System.Net.Http" />
@@ -117,12 +114,6 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\values\strings.xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <XamarinComponentReference Include="GlideComponent">
-      <Visible>False</Visible>
-      <Version>3.7.0</Version>
-    </XamarinComponentReference>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\values-round\dimens.xml" />
@@ -407,6 +398,9 @@
     </PackageReference>
     <PackageReference Include="Xamarin.Android.Arch.Lifecycle.Runtime">
       <Version>1.0.3</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Android.Glide">
+      <Version>4.0.0</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Android.Support.Animated.Vector.Drawable">
       <Version>27.0.2</Version>
