--- a/SCRCHost/SCRCHost.csproj
+++ b/SCRCHost/SCRCHost.csproj
@@ -8,9 +8,9 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <Platforms>x64;x86;ARM64</Platforms>
+    <Platforms>x64;x86;ARM;ARM64</Platforms>
     <TargetPlatformVersion Condition=" '$(TargetPlatformVersion)' == '' ">10.0.19041.0</TargetPlatformVersion>
-    <RuntimeIdentifiers>win-x86;win-x64;win-arm64</RuntimeIdentifiers>
+    <RuntimeIdentifiers>win-x86;win-x64;win-arm;win-arm64</RuntimeIdentifiers>
     <AssetTargetFallback>native</AssetTargetFallback>
 
     <IsPackable>false</IsPackable>
@@ -27,6 +27,9 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Platform)'=='x64'">
     <RuntimeIdentifier>win-x64</RuntimeIdentifier>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Platform)'=='ARM'">
+    <RuntimeIdentifier>win-arm</RuntimeIdentifier>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Platform)'=='ARM64'">
     <RuntimeIdentifier>win-arm64</RuntimeIdentifier>
