--- a/Maui/SimpleWeather.Maui/SimpleWeather.Maui.csproj
+++ b/Maui/SimpleWeather.Maui/SimpleWeather.Maui.csproj
@@ -35,7 +35,7 @@
 		<!-- Splash Screen -->
 		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#0070c0" BaseSize="128,128" />
 		<!-- Images -->
-		<MauiImage Include="Resources\Images\**" />
+		<MauiImage Include="Resources\Images\*" />
 		<!-- Custom Fonts -->
 		<MauiFont Include="Resources\Fonts\**" />
 		<!-- Raw Assets (also remove the "Resources\Raw" prefix) -->
@@ -54,11 +54,11 @@
 		<PackageReference Include="Microsoft.Maui.Controls.Maps" Version="7.0.52" />
 		<PackageReference Include="SkiaSharp.Extended.UI.Maui" Version="2.0.0-preview.61" />
 		<PackageReference Include="SkiaSharp.Skottie" Version="2.88.3" />
-		<PackageReference Include="SkiaSharp.Views" Version="2.88.3" />
 		<PackageReference Include="SkiaSharp.Views.Maui.Controls.Compatibility" Version="2.88.3" />
 		<PackageReference Include="ZCS.Utf8Json" Version="1.4.4" />
 		<PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.4" />
 		<PackageReference Include="SQLitePCLRaw.provider.dynamic_cdecl" Version="2.1.4" />
+		<PackageReference Include="Mapsui.Maui" Version="4.0.0-beta.6" />
 	</ItemGroup>
   <ItemGroup Condition="$(TargetFramework.Contains('windows'))">
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.221209.1" />
@@ -138,9 +138,12 @@
 		<MauiXaml Update="Setup\SetupWelcomePage.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
+		<MauiXaml Update="Preferences\PreferenceListDialogPage.xaml">
+		  <SubType></SubType>
+		</MauiXaml>
 	</ItemGroup>
 	<ItemGroup>
-		<Compile Include="**/*.xaml.cs" Exclude="@(Compile)">
+		<Compile Include="**\*.xaml.cs" Exclude="@(Compile)">
 		  <DependentUpon>%(Filename)</DependentUpon>
 		</Compile>
     </ItemGroup>
@@ -151,6 +154,22 @@
 	  <Compile Update="Preferences\Settings_General.xaml.cs">
 	    <DependentUpon>Settings_General.xaml</DependentUpon>
 	  </Compile>
+	</ItemGroup>
+	<ItemGroup>
+	  <None Remove="Mapsui.Maui" />
+	  <None Remove="Services\" />
+	  <None Remove="Preferences\TableView\" />
+	  <None Remove="SkiaSharp.Views.Maui.Controls" />
+	  <None Remove="Controls\ViewModels\" />
+	  <None Remove="Controls\Graphs\" />
+	  <None Remove="Controls\Graphs\Data\" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Services\" />
+	  <Folder Include="Preferences\TableView\" />
+	  <Folder Include="Controls\ViewModels\" />
+	  <Folder Include="Controls\Graphs\" />
+	  <Folder Include="Controls\Graphs\Data\" />
 	</ItemGroup>
 	<Target Condition="$([MSBuild]::IsOSPlatform('Windows'))" Name="PreBuild" BeforeTargets="PreBuildEvent">
 		<Exec Command="&quot;$(SolutionDir)KeyCheck.exe&quot; &quot;$(SolutionDir)SimpleWeather.Shared\Keys&quot;&#xD;&#xA;&quot;$(SolutionDir)KeyCheck.exe&quot; &quot;$(SolutionDir)SimpleWeather.Weather-API\Keys&quot;&#xD;&#xA;&#xD;&#xA;if errorlevel 1 goto Error&#xD;&#xA;&#xD;&#xA;goto Success&#xD;&#xA;&#xD;&#xA;:Error&#xD;&#xA;exit /b 1&#xD;&#xA;&#xD;&#xA;:Success&#xD;&#xA;exit /b 0" />
