--- a/.gitignore
+++ b/.gitignore
@@ -264,8 +264,10 @@ API_KEY.txt
 /SimpleWeather.Weather-API/Keys/Keys.cs.bak
 /SimpleWeather.Weather-API/Keys/Keys.7z
 /Utf8Json.UniversalCodeGenerator
-/*.bat*
-/*.sh*
+/*.bat
+/*.bat.old
+/*.bat.old.*
+/*.sh
 listingData-*.csv
 /SimpleWeather.Backgrounds
 /SimpleWeather.Extras
