--- a/SimpleWeather.Windows/SimpleWeather.Windows.csproj
+++ b/SimpleWeather.Windows/SimpleWeather.Windows.csproj
@@ -81,6 +81,7 @@
     <PackageReference Include="SkiaSharp.Skottie" Version="2.88.8" />
     <PackageReference Include="SkiaSharp.Views.WinUI" Version="2.88.8" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
+    <PackageReference Include="UnitsNet" Version="5.60.0" />
     <PackageReference Include="WinUIEx" Version="2.4.0" />
   </ItemGroup>
   <ItemGroup>
