--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -34,7 +34,7 @@
 
   <!-- Maui -->
   <PropertyGroup>
-    <MauiVersion>8.0.91</MauiVersion>
+    <MauiVersion>8.0.92</MauiVersion>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -46,16 +46,20 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <SentryVersion>4.11.0</SentryVersion>
+    <SentryVersion>4.12.1</SentryVersion>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <SkiaSharpVersion>2.88.9-preview.2.2</SkiaSharpVersion>
   </PropertyGroup>
 
   <PropertyGroup>
     <WinToolkitVersion>8.1.240916</WinToolkitVersion>
-    <WinAppSDKVersion>1.5.240802000</WinAppSDKVersion>
-    <CsWinRTVersion>2.0.8</CsWinRTVersion>
+    <WinAppSDKVersion>1.6.240923002</WinAppSDKVersion>
+    <CsWinRTVersion>2.1.6</CsWinRTVersion>
     <WinSDKBuildToolsVersion>10.0.22621.3233</WinSDKBuildToolsVersion>
-    <WindowsSdkPackageVersion>10.0.22621.33</WindowsSdkPackageVersion>
-    <MvvmToolkitVersion>8.2.2</MvvmToolkitVersion>
+    <WindowsSdkPackageVersion>10.0.22621.53</WindowsSdkPackageVersion>
+    <MvvmToolkitVersion>8.3.2</MvvmToolkitVersion>
   </PropertyGroup>
 
   <PropertyGroup>
