--- a/Maui/SimpleWeather.Maui/SimpleWeather.Maui.csproj
+++ b/Maui/SimpleWeather.Maui/SimpleWeather.Maui.csproj
@@ -106,26 +106,26 @@
 	<ItemGroup>
 		<PackageReference Include="TimberLog" Version="1.0.0" />
 		<PackageReference Include="CommunityToolkit.Maui" Version="9.1.0" />
-		<PackageReference Include="CommunityToolkit.Maui.Markup" Version="4.1.0" />
+		<PackageReference Include="CommunityToolkit.Maui.Markup" Version="4.2.0" />
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="$(MvvmToolkitVersion)" />
 		<PackageReference Include="CompiledBindings.MAUI" Version="1.0.18" />
 		<PackageReference Include="epj.ProgressBar.Maui" Version="1.0.2" />
 		<PackageReference Include="KeyedSemaphores" Version="5.0.0" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
-		<PackageReference Include="Microsoft.AppCenter.Analytics" Version="5.0.5" />
-		<PackageReference Include="Microsoft.AppCenter.Crashes" Version="5.0.5" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.1" />
+		<PackageReference Include="Microsoft.AppCenter.Analytics" Version="5.0.6" />
+		<PackageReference Include="Microsoft.AppCenter.Crashes" Version="5.0.6" />
 		<PackageReference Include="Plugin.Maui.SegmentedControl" Version="1.0.8" />
 		<PackageReference Include="SkiaSharp.Extended.UI.Maui" Version="2.0.0" />
-		<PackageReference Include="SkiaSharp.Skottie" Version="2.88.8" />
-		<PackageReference Include="SkiaSharp.Views.Maui.Controls.Compatibility" Version="2.88.8" />
+		<PackageReference Include="SkiaSharp.Skottie" Version="$(SkiaSharpVersion)" />
+		<PackageReference Include="SkiaSharp.Views.Maui.Controls.Compatibility" Version="$(SkiaSharpVersion)" />
 		<PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.10" />
 		<PackageReference Include="SQLitePCLRaw.provider.dynamic_cdecl" Version="2.1.10" />
-		<PackageReference Include="Mapsui.Maui" Version="4.1.7" />
-		<PackageReference Include="Microsoft.Extensions.Localization" Version="8.0.8" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
+		<PackageReference Include="Mapsui.Maui" Version="4.1.8" />
+		<PackageReference Include="Microsoft.Extensions.Localization" Version="8.0.10" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.2" />
 
-		<PackageReference Include="AathifMahir.Maui.MauiIcons.Cupertino" Version="3.0.0" />
-		<PackageReference Include="AathifMahir.Maui.MauiIcons.Material" Version="3.0.0" />
+		<PackageReference Include="AathifMahir.Maui.MauiIcons.Cupertino" Version="4.0.0" />
+		<PackageReference Include="AathifMahir.Maui.MauiIcons.Material" Version="4.0.0" />
 	</ItemGroup>
 	<ItemGroup Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">
 		<PackageReference Include="Maui.RevenueCat.iOS" Version="4.39.0.0" />
