--- a/SimpleWeather.Shared/SimpleWeather.Shared.csproj
+++ b/SimpleWeather.Shared/SimpleWeather.Shared.csproj
@@ -71,20 +71,20 @@
     <PackageReference Include="CommunityToolkit.Mvvm" Version="$(MvvmToolkitVersion)" />
     <PackageReference Condition="!$(TargetFramework.Contains('ios')) And !$(TargetFramework.Contains('maccatalyst'))" Include="FirebaseAuthentication.net" Version="4.1.0" />
     <PackageReference Condition="!$(TargetFramework.Contains('ios')) And !$(TargetFramework.Contains('maccatalyst'))" Include="FirebaseDatabase.net" Version="4.2.0" />
-    <PackageReference Include="Microsoft.AppCenter.Analytics" Version="5.0.5" />
-    <PackageReference Include="Microsoft.AppCenter.Crashes" Version="5.0.5" />
+    <PackageReference Include="Microsoft.AppCenter.Analytics" Version="5.0.6" />
+    <PackageReference Include="Microsoft.AppCenter.Crashes" Version="5.0.6" />
     <PackageReference Include="Microsoft.Bcl.HashCode" Version="1.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="NodaTime" Version="3.1.12" />
-    <PackageReference Include="SkiaSharp.Skottie" Version="2.88.8" />
+    <PackageReference Include="NodaTime" Version="3.2.0" />
+    <PackageReference Include="SkiaSharp.Skottie" Version="$(SkiaSharpVersion)" />
     <PackageReference Include="sqlite-net-pcl" Version="1.9.172" />
     <PackageReference Include="SQLiteNetExtensions.Async" Version="2.1.1" />
     <PackageReference Include="Svg.Skia" Version="1.0.0.18" />
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
-    <PackageReference Include="System.Text.Json" Version="8.0.4" />
+    <PackageReference Include="System.Text.Json" Version="8.0.5" />
     <PackageReference Include="TimberLog" Version="1.0.0" />
-    <PackageReference Condition="$(TargetFramework.Contains('windows'))" Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
+    <PackageReference Condition="$(TargetFramework.Contains('windows'))" Include="Microsoft.Extensions.DependencyInjection" Version="8.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.2" />
     <PackageReference Include="ZCS.DataContractResolver" Version="1.2.2" />
   </ItemGroup>
   <ItemGroup Condition="!$(TargetFramework.Contains('windows'))">
